# Agents

./: README.md  mad_libs.ipynb
.devcontainer/: devcontainer.json
01_simple_reflex_agent/: readme.md  reflex_agent.py
chatbot/: README.md
job-assistant-agent/: README.md  agent-v1.py  agent-v2.py  agent-v3.py  application_info.json  main.py  pyproject.toml  requirements.txt
